<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_search_users"
        android:layout_width="411dp"
        android:layout_height="90dp"
        android:layout_marginTop="40dp"
        android:text="@string/search_users_title"
        android:textAlignment="center"
        android:textSize="60sp"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="107dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/search_text_introduce_email"
        android:layout_width="0dp"
        android:layout_height="103dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:text="@string/step_email_search"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/title_search_users"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="238dp"/>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/black"
        android:layout_marginStart="125dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="125dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:text="@string/search_user_button"
        app:cornerRadius="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input_search" />
        />
    <EditText
        android:id="@+id/name_input_search"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/name_background"

        android:hint="Introduce email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_text_introduce_email" />

</androidx.constraintlayout.widget.ConstraintLayout>